set ignored file

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,6 @@ Backup of *.doc*
 # mail
 src/main/resources/application.properties
 */application.properties
-
+System/src/main/resources/application.properties
 
 
